fix(ui): flex item overflow father container

--- a/common/uni.css
+++ b/common/uni.css
@@ -451,6 +451,7 @@ button:after {
 }
 
 .flex {
+	width: 100%; /* 必要的 */
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
